// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ObjectPage generate all optional settings 1`] = `
Object {
  "sap.app": Object {
    "id": "my.test.App",
  },
  "sap.ui5": Object {
    "dependencies": Object {
      "libs": Object {
        "sap.fe.templates": Object {},
      },
    },
    "routing": Object {
      "routes": Array [
        Object {
          "name": "RootEntityListReport",
          "pattern": ":?query:",
          "target": "TestListReport",
        },
        Object {
          "name": "RootEntityObjectPage",
          "pattern": "RootEntity({RootEntityKey}):?query:",
          "target": "RootEntityObjectPage",
        },
        Object {
          "name": "OtherEntityObjectPage",
          "pattern": "OtherEntity:?query:",
          "target": "OtherEntityObjectPage",
        },
      ],
      "targets": Object {
        "OtherEntityObjectPage": Object {
          "id": "OtherEntityObjectPage",
          "name": "sap.fe.templates.ObjectPage",
          "options": Object {
            "settings": Object {
              "enhanceI18n": "i18n/customOtherEntityObjectPage.properties",
              "entitySet": "OtherEntity",
              "navigation": Object {},
              "variantManagement": "Page",
            },
          },
          "type": "Component",
        },
        "RootEntityListReport": Object {},
        "RootEntityObjectPage": Object {},
      },
    },
  },
}
`;

exports[`ObjectPage generate minimal input 1`] = `
Object {
  "sap.app": Object {
    "id": "my.test.App",
  },
  "sap.ui5": Object {
    "dependencies": Object {
      "libs": Object {
        "sap.fe.templates": Object {},
      },
    },
    "routing": Object {
      "routes": Array [
        Object {
          "name": "RootEntityListReport",
          "pattern": ":?query:",
          "target": "TestListReport",
        },
        Object {
          "name": "RootEntityObjectPage",
          "pattern": "RootEntity({RootEntityKey}):?query:",
          "target": "RootEntityObjectPage",
        },
        Object {
          "name": "OtherEntityObjectPage",
          "pattern": "OtherEntity:?query:",
          "target": "OtherEntityObjectPage",
        },
      ],
      "targets": Object {
        "OtherEntityObjectPage": Object {
          "id": "OtherEntityObjectPage",
          "name": "sap.fe.templates.ObjectPage",
          "options": Object {
            "settings": Object {
              "entitySet": "OtherEntity",
              "navigation": Object {},
            },
          },
          "type": "Component",
        },
        "RootEntityListReport": Object {},
        "RootEntityObjectPage": Object {},
      },
    },
  },
}
`;

exports[`ObjectPage generate simple inbound navigation 1`] = `
Object {
  "routes": Array [
    Object {
      "name": "RootEntityListReport",
      "pattern": ":?query:",
      "target": "TestListReport",
    },
    Object {
      "name": "RootEntityObjectPage",
      "pattern": "RootEntity({RootEntityKey}):?query:",
      "target": "RootEntityObjectPage",
    },
    Object {
      "name": "OtherEntityObjectPage",
      "pattern": "OtherEntity({OtherEntityKey}):?query:",
      "target": "OtherEntityObjectPage",
    },
  ],
  "targets": Object {
    "OtherEntityObjectPage": Object {
      "id": "OtherEntityObjectPage",
      "name": "sap.fe.templates.ObjectPage",
      "options": Object {
        "settings": Object {
          "entitySet": "OtherEntity",
          "navigation": Object {},
        },
      },
      "type": "Component",
    },
    "RootEntityListReport": Object {
      "options": Object {
        "settings": Object {
          "navigation": Object {
            "OtherEntity": Object {
              "detail": Object {
                "route": "OtherEntityObjectPage",
              },
            },
          },
        },
      },
    },
    "RootEntityObjectPage": Object {},
  },
}
`;

exports[`ObjectPage generate simple nested navigation 1`] = `
Object {
  "routes": Array [
    Object {
      "name": "RootEntityListReport",
      "pattern": ":?query:",
      "target": "TestListReport",
    },
    Object {
      "name": "RootEntityObjectPage",
      "pattern": "RootEntity({RootEntityKey}):?query:",
      "target": "RootEntityObjectPage",
    },
    Object {
      "name": "OtherEntityObjectPage",
      "pattern": "RootEntity({RootEntityKey})/to_OtherEntity({to_OtherEntityKey}):?query:",
      "target": "OtherEntityObjectPage",
    },
  ],
  "targets": Object {
    "OtherEntityObjectPage": Object {
      "id": "OtherEntityObjectPage",
      "name": "sap.fe.templates.ObjectPage",
      "options": Object {
        "settings": Object {
          "entitySet": "OtherEntity",
          "navigation": Object {},
        },
      },
      "type": "Component",
    },
    "RootEntityListReport": Object {},
    "RootEntityObjectPage": Object {
      "options": Object {
        "settings": Object {
          "navigation": Object {
            "to_OtherEntity": Object {
              "detail": Object {
                "route": "OtherEntityObjectPage",
              },
            },
          },
        },
      },
    },
  },
}
`;
